coredns/ingress/coredns-l7-svclocal.yaml
# Example of using resolving rule patterns
# In this case resolving only accepted for *.svc.local
# You can change it to any pattern, like *.mycompany.internal, *.com, etc
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: coredns.ingress.from.cluster
  namespace: coredns-ns
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: coredns
      k8s:io.kubernetes.pod.namespace: coredns-ns
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
          - port: "53"
            protocol: ANY
          rules:
            dns:
              - matchPattern: "*.cluster.local"
